--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,6 +2,18 @@ body {
   font-family: 'Noto Sans', sans-serif;
 }
 
+@media (max-width: 768px) {  /* mobile screens */
+  video {
+    cursor: pointer;
+  }
+  video::before {
+    content: "▶";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 
 .section-title {
     margin-top: 4rem;  /* Adjust this value as needed */
